[gd_scene load_steps=3 format=3 uid="uid://8ax1ogwo424w"]

[ext_resource type="Script" uid="uid://s6jqw10ta0wu" path="res://main_menu.gd" id="1_nmkr7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_nmkr7")

[node name="Panel" type="Panel" parent="."]
offset_right = 320.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rhts7")

[node name="Label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 13.0
offset_top = 28.0
offset_right = 101.0
offset_bottom = 45.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Placeholder"

[node name="Play" type="Button" parent="."]
offset_left = 13.0
offset_top = 59.0
offset_right = 53.0
offset_bottom = 84.0
text = "Play"

[node name="Tut" type="Button" parent="."]
offset_left = 13.0
offset_top = 91.0
offset_right = 85.0
offset_bottom = 116.0
text = "Tutorial
"

[node name="Panel2" type="Panel" parent="."]
offset_left = 13.0
offset_top = 124.0
offset_right = 133.0
offset_bottom = 149.0

[node name="CheckButton" type="CheckButton" parent="Panel2"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_right = 120.0
offset_bottom = 25.0
text = "HARD MODE"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Tut" to="." method="_on_tut_pressed"]
[connection signal="toggled" from="Panel2/CheckButton" to="." method="_on_check_button_toggled"]
